--- a/partidos_coligacoes.ipynb
+++ b/partidos_coligacoes.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1TC-8o3WLfrX4vyLzYwc5DqwAg2vNdd-d",
-      "authorship_tag": "ABX9TyP5vaMRpOf16jvxyzEpLaNM",
+      "authorship_tag": "ABX9TyN1DUM0mAUVdniOqO2jPeQW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2045,9 +2045,9 @@
         "id": "9AykkToMxVRH"
       },
       "source": [
-        "dataset_path2 = \"/content/drive/My Drive/Data/classificacao_partidos.xlsx\""
+        "dataset_path2 = \"https://raw.githubusercontent.com/aschelin/Coalitions/main/classificacao_partidos.csv\""
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -2056,9 +2056,9 @@
         "id": "gw0S3MAjp-GL"
       },
       "source": [
-        "df_class = pd.read_excel(dataset_path2)"
+        "df_class =pd.read_csv(dataset_path2,encoding='latin',sep=';')"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -2066,15 +2066,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 195
         },
         "id": "tc6blk7hqHpW",
-        "outputId": "ddc44f64-0335-4998-d3e4-a27d0554471f"
+        "outputId": "3bfc38b4-e88a-48ab-b2f0-fdbcbaa0c94d"
       },
       "source": [
         "df_class.head()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2182,7 +2182,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 10
         }
       ]
     },
@@ -2204,7 +2204,7 @@
         "df_class['Nome'] = df_class['Nome'].str.upper() \n",
         " "
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -2215,7 +2215,7 @@
       "source": [
         "df_class.set_index('Nome',inplace=True)\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -2225,13 +2225,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5w-15VKIw9cY",
-        "outputId": "14f80924-765d-47e0-c982-52562402d60c"
+        "outputId": "cd36581c-c79c-424b-fcfd-4bd181c82456"
       },
       "source": [
         "data= df_class['Congresso2019']\n",
         "data"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2277,7 +2277,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 13
         }
       ]
     },
@@ -2300,7 +2300,7 @@
         "data.replace('direita','Right',inplace=True)\n",
         "data.replace('esquerda','Left',inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
